Se agrega Archivo principal y caratula

--- a/caratula.tex
+++ b/caratula.tex
@@ -1,28 +1,35 @@
 \begin{titlepage}
 \centering
+
 \vspace*{2cm}
 
-{\Huge\bfseries Instituto de Formación Técnica Superior \\ Carrera: Tecnicatura en análisis de sistemas}
+{\Large \textbf{TRABAJO PRÁCTICO}
+
+\vspace{1.5cm}
+
+{\LARGE \textbf{Evolución del Sistema de Derechos en la Sociedad de la Información: Protección de Menores en Redes Sociales}}
 
 \vspace{2cm}
 
-{\Large Trabajo Práctico}
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Alumno:} & [Lucas Eduardo Ramirez Bonch] \\
+\hline
+\textbf{Carrera:} & Técnico Superior en Análisis de Sistemas \\
+\hline
+\textbf{Curso:} & 3er año - CICLO LECTIVO: 2025 \\
+\hline
+\textbf{Docente:} & Valeria Alejandra Sosa \\
+\hline
+\textbf{Fecha de Presentación:} & [Fecha] \\
+\hline
+\end{tabular}
+\end{table}
 
-\vspace{1cm}
+\textbf{Repositorio:} https://github.com/Lubonch/TP-Legislacion
 
-{\huge\bfseries La cuarta generacion de los derechos y la proteccion de los menores en las redes sociales}
-
-\vspace{2cm}
-
-{\Large Alumno: Lucas Eduardo Ramirez Bonch \\
-Materia: Legislación Aplicada a la tecnología y comunicaciones \\
-Profesora: Valeria Alejandra Sosa \\
-Fecha: \today}
-
-\vspace{3cm}
-
-{\large Ciudad Autónoma de Buenos Aires, Argentina}
+\vfill
 
 \end{titlepage}
-
-\newpage
