Se agrega la seccion de Resgos digitales y contenidos ilicitos

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -10,3 +10,16 @@ Esta estructura constitucional reconoce la evolcuion historica de los derechos f
     \item \textbf{Derechos de Tercera Generación :} 
     \item \textbf{Cuarta Generación :}
 
+\section{RIESGOS DIGITALES Y DELITOS INFORMÁTICOS CONTRA MENORES}
+
+La exposicion de los menores de edad a los riesgos del entorno digital requieren la intervencion del derecho penal y civil. En Argentina, el Codigo civil y comercial de la nacion establece el regimen de capacidad progresiva, que afecta como el menor ejerce sus derechos.
+
+\textbf{Capacidad progresiva :}
+
+\subsection{Delitos y contenidos ilicitos}
+
+\begin{enumerate}
+    \item \textbf{Pornografia Infanntil :}
+    \item \textbf{Grooming :} 
+    \item \textbf{Acceso ilegal a datos personales :} 
+    \item \textbf{Datos sensibles :}
