Se agrega el cuadro de Regulacion internacional al desarrollo

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -23,3 +23,18 @@ La exposicion de los menores de edad a los riesgos del entorno digital requieren
     \item \textbf{Grooming :} 
     \item \textbf{Acceso ilegal a datos personales :} 
     \item \textbf{Datos sensibles :}
+
+\section{Regulacion internacional}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|r|r|r|r|r|r|}
+\hline
+Jurisdiccion & Ley principal & Edad Minima & Fecha Vigencia & Mecanismo central \\
+\hline
+Estados Unidos & KOSMA/PKSMA(S.278) & 13 años para la prohibicion de cuentas y 17 años para la prohibicion de algoritmos & Pendiente de promulgacion(Entraria en vigor 1 año despues de su promulgacion) & Prohibe los sistemas de recomendacion personalizados(profiling) para menores de 17 años. \\
+Australia & Online Safety Act & 16 años & 10 de Diciembre 2025 & Prohibe el acceso a redes sociales a menores de 16 años. Requiere verificacion de edad a los titulares de cuentas en las plataformas restringidas \\
+Union Europera & DS/RGPD & TODO & 16 de Noviembre de 2022 & 3Exige a las grandes plataformas online(VLOPs) que eliminen mecanismos que sean adictivos. TODO \\
+\hline
+\end{tabular}
+\end{table}
