Se completa la parte de las generaciones del derecho

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -5,10 +5,11 @@ El ordenamiento juridico argentino establece una jerarquia normativa, colocando 
 Esta estructura constitucional reconoce la evolcuion historica de los derechos fundamentales, los cuales se pueden categorizar en distintas generaciones segun su desarrollo temporal y caracteristicas.
 
 \begin{enumerate}
-    \item \textbf{Derechos de Primera Generación :}
-    \item \textbf{Derechos de Segunda Generación :} 
-    \item \textbf{Derechos de Tercera Generación :} 
-    \item \textbf{Cuarta Generación :}
+    \item \textbf{Derechos de Primera Generación :} Surge durante las grandes revoluciones liberales(como la Revolucion Francesa), con el proposito de de esblecer un limite entre el poder del estao y la autonomia infividual. Incluye la livertad de expresion y el derecho a la intimidad.
+    \item \textbf{Derechos de Segunda Generación :} Corresponden a los Derechos Econimicos Sociales y Culturales que sirgieron a principios del siglo XX en respuesta a las desigualdades y explotacion laboral derivadas de la revolucion industrial
+    \item \textbf{Derechos de Tercera Generación :} Corresponden a los derechos colectivos, responden a la necesidad de proteger intereses compartidos, como el derecho a un medio ambiente sano, los derechos de los pueblos originarios. Sin estos derechos se pondria en resgo el ejercicio de de las generaciones anteriores.
+    \item \textbf{Derechos de Cuarta Generación :} Corresponden a los derechos que nacen del mundo informativo, buca adaptar las garantias fundamentales al entorno digital. Incluyen el derecho al libre acceso a la informacion, la reduccion de la brecha digital y la proteccion de datos personales.
+\end{enumerate}   
 
 \section{RIESGOS DIGITALES Y DELITOS INFORMÁTICOS CONTRA MENORES}
 
@@ -19,10 +20,11 @@ La exposicion de los menores de edad a los riesgos del entorno digital requieren
 \subsection{Delitos y contenidos ilicitos}
 
 \begin{enumerate}
-    \item \textbf{Pornografia Infanntil :}
-    \item \textbf{Grooming :} 
+    \item \textbf{Pornografia Infantil :} La Ley 26.388 tipifica la pornografia infantil(art 128 Codigo Penal) como la representacion de un menor de dieiocho años dedicado a actividades sexuales explicitas.
+    \item \textbf{Grooming :} La Ley 26.904 tipifica el grooming como el acto de un adulto que contacta a un menor de edad mediante medios digitales con el proposito de cometer un delito contra su identidad sexual.
     \item \textbf{Acceso ilegal a datos personales :} 
-    \item \textbf{Datos sensibles :}
+    \item \textbf{Ciberacoso :}
+\end{enumerate}
 
 \section{Regulacion internacional}
 
@@ -38,3 +40,8 @@ Union Europera & DS/RGPD & TODO & 16 de Noviembre de 2022 & 3Exige a las grandes
 \hline
 \end{tabular}
 \end{table}
+
+\begin{enumerate}
+    \item \textbf{PKSMA/KOSMA :}
+    \item \textbf{OSA :} 
+    \item \textbf{DSA/RGPD :}  
