Se agrega informacion sobre delitos informaticos y el marco internacional.

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -15,15 +15,14 @@ Esta estructura constitucional reconoce la evolcuion historica de los derechos f
 
 La exposicion de los menores de edad a los riesgos del entorno digital requieren la intervencion del derecho penal y civil. En Argentina, el Codigo civil y comercial de la nacion establece el regimen de capacidad progresiva, que afecta como el menor ejerce sus derechos.
 
-\textbf{Capacidad progresiva :}
+\textbf{Capacidad progresiva :} Una persona menor de 13 años no es capaz de ejercer derechos por si misma y requiere la representacion de sus padres o tutores legales. Los adolescente entre 13 y 16 años tiene una capacidad limitada y es escuchado en procesos que los involucran. A partir de los 16 años ya es considerado un adulto para las decisiones relacionadas con el cuidado de su cuerpo.
 
 \subsection{Delitos y contenidos ilicitos}
 
 \begin{enumerate}
     \item \textbf{Pornografia Infantil :} La Ley 26.388 tipifica la pornografia infantil(art 128 Codigo Penal) como la representacion de un menor de dieiocho años dedicado a actividades sexuales explicitas.
     \item \textbf{Grooming :} La Ley 26.904 tipifica el grooming como el acto de un adulto que contacta a un menor de edad mediante medios digitales con el proposito de cometer un delito contra su identidad sexual.
-    \item \textbf{Acceso ilegal a datos personales :} 
-    \item \textbf{Ciberacoso :}
+    \item \textbf{Acceso ilegal a datos personales :} El acceso ilegal(Art. 153 bis y 157 bis del Codigo Penal) es tipificado por la Ley 26.388. Incluye la violacion de correos electronicos, redes sociales y otros servicios digitales. 
 \end{enumerate}
 
 \section{Regulacion internacional}
@@ -42,6 +41,13 @@ Union Europera & DS/RGPD & TODO & 16 de Noviembre de 2022 & 3Exige a las grandes
 \end{table}
 
 \begin{enumerate}
-    \item \textbf{PKSMA/KOSMA :}
-    \item \textbf{OSA :} 
-    \item \textbf{DSA/RGPD :}  
+    \item \textbf{PKSMA/KOSMA :} El proyecto S. 278 busca prohibir que los menores de 13 años acedan a redes sociales y limilar los sistemas de recomendacion personalizados(profiling) oara menores de 17 años. 
+    \item \textbf{OSA :} La OSA(online safety act) prohibe el acceso a redes sociales a menores de 16 años, exige que las plataformas implementen medidas para el cumplimiento e inpone multas millonarias por la violacion. Exige la verificacion de edad para todos los titulares de cuentas  en plataformas que esten restringidas por edad.
+    \item \textbf{DSA/RGPD :}  La DSA(Digital Service Act) boliga a las grandes plataformas a tener la responsibilidad de proteger a los menores. Pronope la eliminacion de mecanimos edictivos(como las "rachas" o "streaks") y exige verificacion de edad para acceder a servicios en linea.
+    El Parlamento Europeo aprobo fijar la edad minima de acceso a redes sociales en 13 años, pero los estados miembros debaten de elevarla a los 15 o 16 años. 
+    La comicion europea esta trabajando en el desarrollo de la "European digital wallet" para facilitar la verificacion de la identidad digital y facilitar la implementacion de controles de edad.
+/end{enumerate}
+
+
+
+
