WIP Se agrega informacion sobre la responsabilidad

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -48,6 +48,31 @@ Union Europera & DS/RGPD & TODO & 16 de Noviembre de 2022 & 3Exige a las grandes
     La comicion europea esta trabajando en el desarrollo de la "European digital wallet" para facilitar la verificacion de la identidad digital y facilitar la implementacion de controles de edad.
 /end{enumerate}
 
+\section{El impacto de la reglacion de redes en el sistema de derechos}
 
+La regulacion de las redes sociales imponen deberes de control que generan un impacto directo en las distintas generaciones de derechos.
 
+\begin{enumerate}
+    \item \textbf{Libertad de expresion y la primera Generacion :} [Explicar sobre como los filtros y controles podrian afectar la libertad de expresion y van en contra de lo que la primer generacion]
+    \item \textbf{Refuerzo de la tercera y cuarta generacion:} [Explicar como la regulacion busca proteger los derechos colectivos y digitales de los menores de edad, reforzando la 3er y 4ta generacion de derechos] 
+\end{enumerate}
 
+\section{Como aborda la justicia Argentina la regulacion de redes sociales?}
+
+La justicia argentina aborda los conflictos del entorno digital aplicando los principios generales del derecho adaptandolos a un contexto tecnologico.
+
+\subsection{Responsabilidad de los proveedores de servicios(ISP y redes)}
+
+Los proveedores de servicios 
+
+\subsection{Reponsabilidad parental y el sharenting}
+
+La Responsabilidad parental es el conjunto de deberes y derechos que tiene los padres sobre LA PERSONA Y BIENES DEL HIJo para su proteccion, desarrollo y formacion interal(y dentro del contexto digital tambien incluye la proteccion de su identidad digital y provacidad). El estado actua como garante para exigir el cumplimiento de estos deberes.
+
+La ley 26.061 establece que los menores tienen el derecho a ser respetados en su dignididad, reputacion y propia imagen. 
+
+El sharenting es la practica de los padres donde comparten contenido relacionado con sus hijos en las redes sociales y ha generado jurisprudencia debido a la ausencia de legislacion donde los tribunales intervinieron para proteger los derechos personalisimos de los hijos.
+
+\begin{enumerate}
+    \item \textbf{V. F. C/ S. B. S/ MEDIDAS PRECAUTORIAS (ART. 232 DEL CPCC) :} el caso 
+\end{enumerate}
