WIP avances en el desarrollo del trabajo

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -61,9 +61,19 @@ La regulacion de las redes sociales imponen deberes de control que generan un im
 
 La justicia argentina aborda los conflictos del entorno digital aplicando los principios generales del derecho adaptandolos a un contexto tecnologico.
 
-\subsection{Responsabilidad de los proveedores de servicios(ISP y redes)}
+\subsection{Responsabilidad de los proveedores de servicios}
 
-Los proveedores de servicios 
+Los proveeedores de servicios de internet son definidos como intermediarios tecnologicos que permiten acceder a redes datos, asi como tambien transmitir y almacenar los datos.
+
+La ley 27.078(Ley argentina Digital) declara de interes publico el desarrollo de las TICs y establece principios para los prestadores de serivicios:
+
+\begin{enumerate}
+    \item \textbf{Neutralidad de Red :} Garantiza la completa neutralidad de las redes y prohibe que los prestadores de servicios bloqueen, interfieran o restringan el acceso a cualquier contenido o aplicacion, salvo por una orden judicial o una expresa solicitud del usuario.
+
+    \item \textbf{Inviolabilidad de las comunicaciones :} Garantiza la invilabilidad de la correspondencia y comunicaciones electronicas, incluyendo los datos de trafico. Su itnercepcion solo puede realizarse mediante una orden judicial.
+\end{enumerate}
+
+Los proveedores de servicio tambien tienen el deber de prevenir el daño(Art 1710 CCyC) y la boligacion de ofrecer software de proteccion y recomendar el uso de programas de bloqueo de sitios pics.[REVISAR!!!]
 
 \subsection{Reponsabilidad parental y el sharenting}
 
@@ -74,5 +84,8 @@ La ley 26.061 establece que los menores tienen el derecho a ser respetados en su
 El sharenting es la practica de los padres donde comparten contenido relacionado con sus hijos en las redes sociales y ha generado jurisprudencia debido a la ausencia de legislacion donde los tribunales intervinieron para proteger los derechos personalisimos de los hijos.
 
 \begin{enumerate}
-    \item \textbf{V. F. C/ S. B. S/ MEDIDAS PRECAUTORIAS (ART. 232 DEL CPCC) :} el caso 
+    \item \textbf{V. F. C/ S. B. S/ MEDIDAS PRECAUTORIAS (ART. 232 DEL CPCC) :} en el fallo el Padre(V. F. C.) solicita que se intime a la madre(S. B.) a abstenerse de subir fotos y videos de sus hijas en redes sociales con fines comerciales.
+    El tribunal aplico el interes superior del niño, dandole prioridad a los derechos personalisimos de las niñas sobre el derecho a la livertad de expresion de la madre. 
+
+    El Fallo reafirma que la responsabilidad parental no inluye el derecho a exponer a los hijos en las redes sociales y no puede realizarse de forma unilateral y siempre debe ceder ante el interes y la voluntad del niño.
 \end{enumerate}
