--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -35,7 +35,7 @@ Jurisdiccion & Ley principal & Edad Minima & Fecha Vigencia & Mecanismo central 
 \hline
 Estados Unidos & KOSMA/PKSMA(S.278) & 13 años para la prohibicion de cuentas y 17 años para la prohibicion de algoritmos & Pendiente de promulgacion(Entraria en vigor 1 año despues de su promulgacion) & Prohibe los sistemas de recomendacion personalizados(profiling) para menores de 17 años. \\
 Australia & Online Safety Act & 16 años & 10 de Diciembre 2025 & Prohibe el acceso a redes sociales a menores de 16 años. Requiere verificacion de edad a los titulares de cuentas en las plataformas restringidas \\
-Union Europera & DS/RGPD & TODO & 16 de Noviembre de 2022 & 3Exige a las grandes plataformas online(VLOPs) que eliminen mecanismos que sean adictivos. TODO \\
+Union Europera & DS & 13 años (Aprobación PE); debate a 15/16 & 16 de Noviembre de 2022 & Exige a las grandes plataformas online(VLOPs) que eliminen mecanismos que sean adictivos. Busca implementar una solucion general como la "Cartera Digital" para que el control sea mas efectivo \\
 \hline
 \end{tabular}
 \end{table}
@@ -43,7 +43,7 @@ Union Europera & DS/RGPD & TODO & 16 de Noviembre de 2022 & 3Exige a las grandes
 \begin{enumerate}
     \item \textbf{PKSMA/KOSMA :} El proyecto S. 278 busca prohibir que los menores de 13 años acedan a redes sociales y limilar los sistemas de recomendacion personalizados(profiling) oara menores de 17 años. 
     \item \textbf{OSA :} La OSA(online safety act) prohibe el acceso a redes sociales a menores de 16 años, exige que las plataformas implementen medidas para el cumplimiento e inpone multas millonarias por la violacion. Exige la verificacion de edad para todos los titulares de cuentas  en plataformas que esten restringidas por edad.
-    \item \textbf{DSA/RGPD :}  La DSA(Digital Service Act) boliga a las grandes plataformas a tener la responsibilidad de proteger a los menores. Pronope la eliminacion de mecanimos edictivos(como las "rachas" o "streaks") y exige verificacion de edad para acceder a servicios en linea.
+    \item \textbf{DSA :}  La DSA(Digital Service Act) boliga a las grandes plataformas a tener la responsibilidad de proteger a los menores. Pronope la eliminacion de mecanimos edictivos(como las "rachas" o "streaks") y exige verificacion de edad para acceder a servicios en linea.
     El Parlamento Europeo aprobo fijar la edad minima de acceso a redes sociales en 13 años, pero los estados miembros debaten de elevarla a los 15 o 16 años. 
     La comicion europea esta trabajando en el desarrollo de la "European digital wallet" para facilitar la verificacion de la identidad digital y facilitar la implementacion de controles de edad.
 /end{enumerate}
@@ -54,7 +54,7 @@ La regulacion de las redes sociales imponen deberes de control que generan un im
 
 \begin{enumerate}
     \item \textbf{Libertad de expresion y la primera Generacion :} [Explicar sobre como los filtros y controles podrian afectar la libertad de expresion y van en contra de lo que la primer generacion]
-    \item \textbf{Refuerzo de la tercera y cuarta generacion:} [Explicar como la regulacion busca proteger los derechos colectivos y digitales de los menores de edad, reforzando la 3er y 4ta generacion de derechos] 
+    \item \textbf{Refuerzo de la tercera y cuarta generacion:} [Explicar como la regulacion busca proteger los derechos colectivos y digitales de los menores de edad, reforzando la 3er y 4ta generacion de derechos. Tambien comentar sobre como la verificacion de edad genera insertidumbre sobre como se van a proteger los datos personales(no solo para los menores, los adultos tambien).] 
 \end{enumerate}
 
 \section{Como aborda la justicia Argentina la regulacion de redes sociales?}
