WIP se corrigen errores de ortografia

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -1,91 +1,87 @@
 \section{EL SISTEMA DE DERECHOS}
 
-El ordenamiento juridico argentino establece una jerarquia normativa, colocando en lo mas alto a la constitucion nacional junto con los tratados internacionales incorporados mediante el Art. 72 inc. 22
+El ordenamiento jurídico argentino establece una jerarquía normativa, colocando en lo más alto a la constitución nacional junto con los tratados internacionales incorporados mediante el Art. 72 inc. 22
 
-Esta estructura constitucional reconoce la evolcuion historica de los derechos fundamentales, los cuales se pueden categorizar en distintas generaciones segun su desarrollo temporal y caracteristicas.
+Esta estructura constitucional reconoce la evolución histórica de los derechos fundamentales, los cuales se pueden categorizar en distintas generaciones según su desarrollo temporal y características.
 
 \begin{enumerate}
-    \item \textbf{Derechos de Primera Generación :} Surge durante las grandes revoluciones liberales(como la Revolucion Francesa), con el proposito de de esblecer un limite entre el poder del estao y la autonomia infividual. Incluye la livertad de expresion y el derecho a la intimidad.
-    \item \textbf{Derechos de Segunda Generación :} Corresponden a los Derechos Econimicos Sociales y Culturales que sirgieron a principios del siglo XX en respuesta a las desigualdades y explotacion laboral derivadas de la revolucion industrial
-    \item \textbf{Derechos de Tercera Generación :} Corresponden a los derechos colectivos, responden a la necesidad de proteger intereses compartidos, como el derecho a un medio ambiente sano, los derechos de los pueblos originarios. Sin estos derechos se pondria en resgo el ejercicio de de las generaciones anteriores.
-    \item \textbf{Derechos de Cuarta Generación :} Corresponden a los derechos que nacen del mundo informativo, buca adaptar las garantias fundamentales al entorno digital. Incluyen el derecho al libre acceso a la informacion, la reduccion de la brecha digital y la proteccion de datos personales.
+    \item \textbf{Derechos de Primera Generación :} Surge durante las grandes revoluciones liberales(como la Revolución Francesa), con el propósito de establecer un límite entre el poder del estado y la autonomía individual. Incluye la libertad de expresión y el derecho a la intimidad.
+    \item \textbf{Derechos de Segunda Generación :} Corresponden a los Derechos Económicos Sociales y Culturales que surgieron a principios del siglo XX en respuesta a las desigualdades y explotación laboral derivadas de la revolución industrial
+    \item \textbf{Derechos de Tercera Generación :} Corresponden a los derechos colectivos, responden a la necesidad de proteger intereses compartidos, como el derecho a un medio ambiente sano, los derechos de los pueblos originarios. Sin estos derechos se pondría en riesgo el ejercicio de las generaciones anteriores.
+    \item \textbf{Derechos de Cuarta Generación :} Corresponden a los derechos que nacen del mundo informático, busca adaptar las garantías fundamentales al entorno digital. Incluyen el derecho al libre acceso a la información, la reducción de la brecha digital y la protección de datos personales.
 \end{enumerate}   
 
 \section{RIESGOS DIGITALES Y DELITOS INFORMÁTICOS CONTRA MENORES}
 
-La exposicion de los menores de edad a los riesgos del entorno digital requieren la intervencion del derecho penal y civil. En Argentina, el Codigo civil y comercial de la nacion establece el regimen de capacidad progresiva, que afecta como el menor ejerce sus derechos.
+La exposición de los menores de edad a los riesgos del entorno digital requieren la intervención del derecho penal y civil. En Argentina, el Código civil y comercial de la nación establece el régimen de capacidad progresiva, que afecta cómo el menor ejerce sus derechos.
 
-\textbf{Capacidad progresiva :} Una persona menor de 13 años no es capaz de ejercer derechos por si misma y requiere la representacion de sus padres o tutores legales. Los adolescente entre 13 y 16 años tiene una capacidad limitada y es escuchado en procesos que los involucran. A partir de los 16 años ya es considerado un adulto para las decisiones relacionadas con el cuidado de su cuerpo.
+\textbf{Capacidad progresiva :} Una persona menor de 13 años no es capaz de ejercer derechos por sí misma y requiere la representación de sus padres o tutores legales. Los adolescentes entre 13 y 16 años tienen una capacidad limitada y son escuchados en procesos que los involucran. A partir de los 16 años ya es considerado un adulto para las decisiones relacionadas con el cuidado de su cuerpo.
 
-\subsection{Delitos y contenidos ilicitos}
+\subsection{Delitos y contenidos ilícitos}
 
 \begin{enumerate}
-    \item \textbf{Pornografia Infantil :} La Ley 26.388 tipifica la pornografia infantil(art 128 Codigo Penal) como la representacion de un menor de dieiocho años dedicado a actividades sexuales explicitas.
-    \item \textbf{Grooming :} La Ley 26.904 tipifica el grooming como el acto de un adulto que contacta a un menor de edad mediante medios digitales con el proposito de cometer un delito contra su identidad sexual.
-    \item \textbf{Acceso ilegal a datos personales :} El acceso ilegal(Art. 153 bis y 157 bis del Codigo Penal) es tipificado por la Ley 26.388. Incluye la violacion de correos electronicos, redes sociales y otros servicios digitales. 
+    \item \textbf{Pornografía Infantil :} La Ley 26.388 tipifica la pornografía infantil(art 128 Código Penal) como la representación de un menor de dieciocho años dedicado a actividades sexuales explícitas.
+    \item \textbf{Grooming :} La Ley 26.904 tipifica el grooming como el acto de un adulto que contacta a un menor de edad mediante medios digitales con el propósito de cometer un delito contra su integridad sexual.
+    \item \textbf{Acceso ilegal a datos personales :} El acceso ilegal(Art. 153 bis y 157 bis del Código Penal) es tipificado por la Ley 26.388. Incluye la violación de correos electrónicos, redes sociales y otros servicios digitales. 
 \end{enumerate}
 
-\section{Regulacion internacional}
+\section{Regulación internacional}
 
 \begin{table}[H]
 \centering
 \begin{tabular}{|l|r|r|r|r|r|r|}
 \hline
-Jurisdiccion & Ley principal & Edad Minima & Fecha Vigencia & Mecanismo central \\
+Jurisdicción & Ley principal & Edad Mínima & Fecha Vigencia & Mecanismo central \\
 \hline
-Estados Unidos & KOSMA/PKSMA(S.278) & 13 años para la prohibicion de cuentas y 17 años para la prohibicion de algoritmos & Pendiente de promulgacion(Entraria en vigor 1 año despues de su promulgacion) & Prohibe los sistemas de recomendacion personalizados(profiling) para menores de 17 años. \\
-Australia & Online Safety Act & 16 años & 10 de Diciembre 2025 & Prohibe el acceso a redes sociales a menores de 16 años. Requiere verificacion de edad a los titulares de cuentas en las plataformas restringidas \\
-Union Europera & DS & 13 años (Aprobación PE); debate a 15/16 & 16 de Noviembre de 2022 & Exige a las grandes plataformas online(VLOPs) que eliminen mecanismos que sean adictivos. Busca implementar una solucion general como la "Cartera Digital" para que el control sea mas efectivo \\
+Estados Unidos & KOSMA/PKSMA(S.278) & 13 años para la prohibición de cuentas y 17 años para la prohibición de algoritmos & Pendiente de promulgación(Entraría en vigor 1 año después de su promulgación) & Prohíbe los sistemas de recomendación personalizados(profiling) para menores de 17 años. \\
+Australia & Online Safety Act & 16 años & 10 de Diciembre 2025 & Prohíbe el acceso a redes sociales a menores de 16 años. Requiere verificación de edad a los titulares de cuentas en las plataformas restringidas \\
+Unión Europea & DS & 13 años (Aprobación PE); debate a 15/16 & 16 de Noviembre de 2022 & Exige a las grandes plataformas online(VLOPs) que eliminen mecanismos que sean adictivos. Busca implementar una solución general como la "Cartera Digital" para que el control sea más efectivo \\
 \hline
 \end{tabular}
 \end{table}
 
 \begin{enumerate}
-    \item \textbf{PKSMA/KOSMA :} El proyecto S. 278 busca prohibir que los menores de 13 años acedan a redes sociales y limilar los sistemas de recomendacion personalizados(profiling) oara menores de 17 años. 
-    \item \textbf{OSA :} La OSA(online safety act) prohibe el acceso a redes sociales a menores de 16 años, exige que las plataformas implementen medidas para el cumplimiento e inpone multas millonarias por la violacion. Exige la verificacion de edad para todos los titulares de cuentas  en plataformas que esten restringidas por edad.
-    \item \textbf{DSA :}  La DSA(Digital Service Act) boliga a las grandes plataformas a tener la responsibilidad de proteger a los menores. Pronope la eliminacion de mecanimos edictivos(como las "rachas" o "streaks") y exige verificacion de edad para acceder a servicios en linea.
-    El Parlamento Europeo aprobo fijar la edad minima de acceso a redes sociales en 13 años, pero los estados miembros debaten de elevarla a los 15 o 16 años. 
-    La comicion europea esta trabajando en el desarrollo de la "European digital wallet" para facilitar la verificacion de la identidad digital y facilitar la implementacion de controles de edad.
+    \item \textbf{PKSMA/KOSMA :} El proyecto S. 278 busca prohibir que los menores de 13 años accedan a redes sociales y limitar los sistemas de recomendación personalizados(profiling) para menores de 17 años. 
+    \item \textbf{OSA :} La OSA(online safety act) prohíbe el acceso a redes sociales a menores de 16 años, exige que las plataformas implementen medidas para el cumplimiento e impone multas millonarias por la violación. Exige la verificación de edad para todos los titulares de cuentas en plataformas que estén restringidas por edad.
+    \item \textbf{DSA :}  La DSA(Digital Service Act) obliga a las grandes plataformas a tener la responsabilidad de proteger a los menores. Prohíbe la eliminación de mecanismos adictivos(como las "rachas" o "streaks") y exige verificación de edad para acceder a servicios en línea.
+    El Parlamento Europeo aprobó fijar la edad mínima de acceso a redes sociales en 13 años, pero los estados miembros debaten elevarla a los 15 o 16 años.
+    La comisión europea está trabajando en el desarrollo de la "European digital wallet" para facilitar la verificación de la identidad digital y facilitar la implementación de controles de edad.
 /end{enumerate}
 
-\section{El impacto de la reglacion de redes en el sistema de derechos}
+\section{El impacto de la regulación de redes en el sistema de derechos}
 
-La regulacion de las redes sociales imponen deberes de control que generan un impacto directo en las distintas generaciones de derechos.
+La regulación de las redes sociales impone deberes de control que generan un impacto directo en las distintas generaciones de derechos.
 
 \begin{enumerate}
-    \item \textbf{Libertad de expresion y la primera Generacion :} [Explicar sobre como los filtros y controles podrian afectar la libertad de expresion y van en contra de lo que la primer generacion]
-    \item \textbf{Refuerzo de la tercera y cuarta generacion:} [Explicar como la regulacion busca proteger los derechos colectivos y digitales de los menores de edad, reforzando la 3er y 4ta generacion de derechos. Tambien comentar sobre como la verificacion de edad genera insertidumbre sobre como se van a proteger los datos personales(no solo para los menores, los adultos tambien).] 
+    \item \textbf{Libertad de expresión y la primera Generación :} [Explicar sobre cómo los filtros y controles podrían afectar la libertad de expresión y van en contra de lo que la primera generación]
+    \item \textbf{Refuerzo de la tercera y cuarta generación:} [Explicar cómo la regulación busca proteger los derechos colectivos y digitales de los menores de edad, reforzando la 3era y 4ta generación de derechos. También comentar sobre cómo la verificación de edad genera incertidumbre sobre cómo se van a proteger los datos personales(no solo para los menores, los adultos también).]
 \end{enumerate}
 
-\section{Como aborda la justicia Argentina la regulacion de redes sociales?}
-
-La justicia argentina aborda los conflictos del entorno digital aplicando los principios generales del derecho adaptandolos a un contexto tecnologico.
+\section{¿Cómo aborda la justicia Argentina la regulación de redes sociales?}La justicia argentina aborda los conflictos del entorno digital aplicando los principios generales del derecho adaptándolos a un contexto tecnológico.
 
 \subsection{Responsabilidad de los proveedores de servicios}
 
-Los proveeedores de servicios de internet son definidos como intermediarios tecnologicos que permiten acceder a redes datos, asi como tambien transmitir y almacenar los datos.
+Los proveedores de servicios de internet son definidos como intermediarios tecnológicos que permiten acceder a redes datos, así como también transmitir y almacenar los datos.
 
-La ley 27.078(Ley argentina Digital) declara de interes publico el desarrollo de las TICs y establece principios para los prestadores de serivicios:
+La ley 27.078(Ley argentina Digital) declara de interés público el desarrollo de las TICs y establece principios para los prestadores de servicios:
 
 \begin{enumerate}
-    \item \textbf{Neutralidad de Red :} Garantiza la completa neutralidad de las redes y prohibe que los prestadores de servicios bloqueen, interfieran o restringan el acceso a cualquier contenido o aplicacion, salvo por una orden judicial o una expresa solicitud del usuario.
+    \item \textbf{Neutralidad de Red :} Garantiza la completa neutralidad de las redes y prohíbe que los prestadores de servicios bloqueen, interfieran o restrinjan el acceso a cualquier contenido o aplicación, salvo por una orden judicial o una expresa solicitud del usuario.
 
-    \item \textbf{Inviolabilidad de las comunicaciones :} Garantiza la invilabilidad de la correspondencia y comunicaciones electronicas, incluyendo los datos de trafico. Su itnercepcion solo puede realizarse mediante una orden judicial.
+    \item \textbf{Inviolabilidad de las comunicaciones :} Garantiza la inviolabilidad de la correspondencia y comunicaciones electrónicas, incluyendo los datos de tráfico. Su intercepción solo puede realizarse mediante una orden judicial.
 \end{enumerate}
 
-Los proveedores de servicio tambien tienen el deber de prevenir el daño(Art 1710 CCyC) y la boligacion de ofrecer software de proteccion y recomendar el uso de programas de bloqueo de sitios pics.[REVISAR!!!]
+Los proveedores de servicio también tienen el deber de prevenir el daño(Art 1710 CCyC) y la obligación de ofrecer software de protección y recomendar el uso de programas de bloqueo de sitios PICS.[REVISAR!!!]
 
-\subsection{Reponsabilidad parental y el sharenting}
+\subsection{Responsabilidad parental y el sharenting}
 
-La Responsabilidad parental es el conjunto de deberes y derechos que tiene los padres sobre LA PERSONA Y BIENES DEL HIJo para su proteccion, desarrollo y formacion interal(y dentro del contexto digital tambien incluye la proteccion de su identidad digital y provacidad). El estado actua como garante para exigir el cumplimiento de estos deberes.
+La Responsabilidad parental es el conjunto de deberes y derechos que tienen los padres sobre la persona y bienes del hijo para su protección, desarrollo y formación integral(y dentro del contexto digital también incluye la protección de su identidad digital y privacidad). El estado actúa como garante para exigir el cumplimiento de estos deberes.
 
-La ley 26.061 establece que los menores tienen el derecho a ser respetados en su dignididad, reputacion y propia imagen. 
+La ley 26.061 establece que los menores tienen el derecho a ser respetados en su dignidad, reputación y propia imagen.
 
-El sharenting es la practica de los padres donde comparten contenido relacionado con sus hijos en las redes sociales y ha generado jurisprudencia debido a la ausencia de legislacion donde los tribunales intervinieron para proteger los derechos personalisimos de los hijos.
-
-\begin{enumerate}
+El sharenting es la práctica de los padres donde comparten contenido relacionado con sus hijos en las redes sociales y ha generado jurisprudencia debido a la ausencia de legislación donde los tribunales intervinieron para proteger los derechos personalísimos de los hijos.\begin{enumerate}
     \item \textbf{V. F. C/ S. B. S/ MEDIDAS PRECAUTORIAS (ART. 232 DEL CPCC) :} en el fallo el Padre(V. F. C.) solicita que se intime a la madre(S. B.) a abstenerse de subir fotos y videos de sus hijas en redes sociales con fines comerciales.
-    El tribunal aplico el interes superior del niño, dandole prioridad a los derechos personalisimos de las niñas sobre el derecho a la livertad de expresion de la madre. 
+    El tribunal aplicó el interés superior del niño, dándole prioridad a los derechos personalísimos de las niñas sobre el derecho a la libertad de expresión de la madre.
 
-    El Fallo reafirma que la responsabilidad parental no inluye el derecho a exponer a los hijos en las redes sociales y no puede realizarse de forma unilateral y siempre debe ceder ante el interes y la voluntad del niño.
+    El Fallo reafirma que la responsabilidad parental no incluye el derecho a exponer a los hijos en las redes sociales y no puede realizarse de forma unilateral y siempre debe ceder ante el interés y la voluntad del niño.
 \end{enumerate}
