--- a/introduccion.tex
+++ b/introduccion.tex
@@ -1,7 +1,7 @@
 \section*{INTRODUCCIÓN}
 \addcontentsline{toc}{section}{INTRODUCCIÓN}
 
-El surgimiento de las TICs(Tecnologías de la Información y la Comunicación) provocaron una transformación en el ámbito empresarial y social, creando lo que se denomina la sociedad de la información y el conocimiento. Aunque estas tecnologías tienen como objetivo el mejorar la calidad de vida humana, la transición digital presenta desafíos en la seguridad informática. El inicio de la web 2.0 consolidó este panorama tecnológico mediante la facilitación de espacios interactivos donde los usuarios pueden interactuar creando contenido, estableciendo comunidades virtuales.
+El surgimiento de las TICs(Tecnologías de la Información y la Comunicación) provocó una transformación en el ámbito empresarial y social, creando lo que se denomina la sociedad de la información y el conocimiento. Aunque estas tecnologías tienen como objetivo mejorar la calidad de vida humana, la transición digital presenta desafíos en la seguridad informática. El inicio de la web 2.0 consolidó este panorama tecnológico mediante la facilitación de espacios interactivos donde los usuarios pueden interactuar creando contenido, estableciendo comunidades virtuales.
 
 En este marco digital, se manifiesta una tensión entre el ejercicio de los derechos fundamentales como la libertad de expresión y la intimidad, por un lado, y la necesidad de establecer marcos regulatorios que protejan bienes jurídicos esenciales, sobre todo cuando involucran menores de edad, que son los más vulnerables frente a los riesgos del entorno digital.
 
