WIP correcciones de codigo LaTeX

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -46,7 +46,7 @@ Unión Europea & DS & 13 años (Aprobación PE); debate a 15/16 & 16 de Noviembr
     \item \textbf{DSA :}  La DSA(Digital Service Act) obliga a las grandes plataformas a tener la responsabilidad de proteger a los menores. Prohíbe la eliminación de mecanismos adictivos(como las "rachas" o "streaks") y exige verificación de edad para acceder a servicios en línea.
     El Parlamento Europeo aprobó fijar la edad mínima de acceso a redes sociales en 13 años, pero los estados miembros debaten elevarla a los 15 o 16 años.
     La comisión europea está trabajando en el desarrollo de la "European digital wallet" para facilitar la verificación de la identidad digital y facilitar la implementación de controles de edad.
-/end{enumerate}
+\end{enumerate}
 
 \section{El impacto de la regulación de redes en el sistema de derechos}
 
