WIP se arregla como se ve el cuadro de la regulacion internacional

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -29,15 +29,19 @@ La exposición de los menores de edad a los riesgos del entorno digital requiere
 
 \begin{table}[H]
 \centering
-\begin{tabular}{|l|r|r|r|r|r|r|}
+\footnotesize
+\begin{tabular}{|p{3.5cm}|p{2.5cm}|p{8cm}|}
 \hline
-Jurisdicción & Ley principal & Edad Mínima & Fecha Vigencia & Mecanismo central \\
+\textbf{País/Ley} & \textbf{Edad Mínima} & \textbf{Características principales} \\
 \hline
-Estados Unidos & KOSMA/PKSMA(S.278) & 13 años para la prohibición de cuentas y 17 años para la prohibición de algoritmos & Pendiente de promulgación(Entraría en vigor 1 año después de su promulgación) & Prohíbe los sistemas de recomendación personalizados(profiling) para menores de 17 años. \\
-Australia & Online Safety Act & 16 años & 10 de Diciembre 2025 & Prohíbe el acceso a redes sociales a menores de 16 años. Requiere verificación de edad a los titulares de cuentas en las plataformas restringidas \\
-Unión Europea & DS & 13 años (Aprobación PE); debate a 15/16 & 16 de Noviembre de 2022 & Exige a las grandes plataformas online(VLOPs) que eliminen mecanismos que sean adictivos. Busca implementar una solución general como la "Cartera Digital" para que el control sea más efectivo \\
+\textbf{Estados Unidos} \newline KOSMA/PKSMA (S.278) & 13 años (cuentas) \newline 17 años (algoritmos) & Prohíbe los sistemas de recomendación personalizados (profiling) para menores de 17 años. Pendiente de promulgación (Entraría en vigor 1 año después de su aprobación). \\
+\hline
+\textbf{Australia} \newline Online Safety Act & 16 años & Prohíbe el acceso a redes sociales a menores de 16 años. Requiere verificación de edad a los titulares de cuentas en las plataformas restringidas. Vigente: 10 de Diciembre 2025. \\
+\hline
+\textbf{Unión Europea} \newline Digital Services Act & 13 años (Aprobación PE) \newline Debate: 15/16 años & Exige a las grandes plataformas online (VLOPs) que eliminen mecanismos adictivos. Busca implementar la "Cartera Digital" europea para control de edad más efectivo. Vigente: 16 de Noviembre 2022. \\
 \hline
 \end{tabular}
+\caption{Comparación de regulaciones internacionales sobre protección de menores en redes sociales}
 \end{table}
 
 \begin{enumerate}
