--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{array}
 \usepackage{booktabs}
 \usepackage{longtable}
+\usepackage{float}
 
 \geometry{left=3cm,right=2.5cm,top=2.5cm,bottom=2.5cm}
 
